# electronics-guide

./: README.md  compose.dev.yml  compose.prod.yml  env  package-lock.json
.github/workflows/: ci-client-v2.yml  ci-client.yml  ci-server.yml
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/public/: index.html
client/src/: App.css  App.tsx  index.css  theme.ts
client/src/components/: ComponentList.tsx  FileUpload.tsx  ProjectIdeasList.tsx  ProjectTutorial.tsx
client/src/components/ui/: hover-border-gradient.tsx
client/src/pages/: UploadPage.tsx
client/src/services/: api.ts
client/src/shadcn-ui/: Button.tsx
client/src/types/: heroicons.d.ts
client/src/ui/: background-boxes.tsx  text-generate-effect.tsx
client/src/utils/: cn.ts
server/: Dockerfile  README.md  pyproject.toml
server/app/: main.py  shared_resources.py  utils.py
server/app/api/: task_manager.py
server/app/api/routes/: image_analysis.py  tutorial_generate.py
server/app/constants/: prompts.py  section_titles.py
server/app/core/: config.py
server/app/models/: image.py  workflow.py
server/app/services/: ideas_service.py  image_service.py  llm.py  nodes.py  tutorial_service.py
server/app/services/memory/: ideas_memory.py  section_summary_memory.py
server/app/services/workflows/: llm.py  nodes.py  tutorial_workflow.py
server/app/services/workflows/tools/tavily/: search_tool.py  tavily_tool_spec.py
server/app/utils/: markdown.py  save_image_to_temp.py
server/app/workflows/: image_workflow.py
server/scripts/: index.py
(+8 files in other folders)
